# learn

./: .env.example  .gitignore  .markdownlint.json  .markdownlintignore  CLAUDE.md  COMPETITIVE_ANALYSIS.md  CONTENT_CREATION_SUMMARY.md  CONTRIBUTING.md  CRITICAL_FIXES_APPLIED.md  LAYOUT_STYLE_GUIDE.md  LICENSE  PHASE2_FEATURES.md  PLATFORM_AUDIT.md  PRD.md  PRODUCTION_AUDIT_REPORT.md  PRODUCTION_CHECKLIST.md  PROGRESS.md  README.md  SESSION2_SUMMARY.md  SESSION3_SUMMARY.md  SESSION4_SUMMARY.md  SESSION5_SUMMARY.md  SESSION6_SUMMARY.md  SESSION_LATEST_SUMMARY.md  TEST_RESULTS_PHASE1.md  TODO.md  bun.lockb  capacitor.config.ts  eslint.config.mjs  jest.config.mjs  jest.setup.js  next.config.ts  package-lock.json  package.json  prisma.config.ts  quick-crud-test.sh  quick-test.sh  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  (+6 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  content_suggestion.yml  feature_request.yml
.github/workflows/: content-lint.yml  ops-check.yml  test.yml
__tests__/api/: phase2-integration.test.ts
content/courses/: ai-foundations.md  computer-vision-fundamentals.md  data-engineering-fundamentals.md  deep-learning-neural-networks.md  generative-ai-llm-applications.md  machine-learning-fundamentals.md  mlops-model-deployment.md  natural-language-processing.md  python-data-science.md  sql-data-analysis.md  web-development-101.md
docs/: MOBILE_RELEASE.md
exercises/: CONTRIBUTING.md  README.md  conftest.py  package.json  pyproject.toml
exercises/.github/workflows/: test.yml
exercises/python-basics/: README.md
exercises/python-basics/exercises/01-variables/: README.md  test_variables.py  variables.py  variables_solution.py
exercises/python-basics/exercises/02-functions/: README.md  functions.py  functions_solution.py  test_functions.py
exercises/python-basics/exercises/03-data-structures/: README.md  data_structures.py  data_structures_solution.py  test_data_structures.py
exercises/sql-fundamentals/: README.md
exercises/sql-fundamentals/exercises/01-select-basics/: README.md  exercise.sql  solution.sql  test_select_basics.py
exercises/sql-fundamentals/exercises/02-filtering/: README.md  exercise.sql  solution.sql  test_filtering.py
exercises/sql-fundamentals/exercises/03-joins/: README.md  exercise.sql  solution.sql  test_joins.py
prisma/: content-importer.ts  dev.db  schema.prisma  seed-assessments.ts  seed-sqlite.ts  seed.ts
public/: manifest.json  sw.js
scripts/: bootstrap-sentry-read-checks.sh  e2e-auth-test.ts  init-db.js  migrate-community-points.js  ops-check.sh  test-e2e.sh
src/: middleware.ts  proxy.ts
(+336 files in other folders)
